# chess

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  index.js  package-lock.json  package.json
client/: LICENSE-MIT  README.md  package-lock.json  package.json
docs/: design.md  piece.md  rules.md  user-flows.md
src/: main.rs
src/game/: board.rs  game.rs  mod.rs  piece.rs  player.rs  ruleset.rs  session.rs
